Fix all the font size to be mobile responsive

--- a/styles.css
+++ b/styles.css
@@ -267,7 +267,7 @@ main {
 @media only screen and (min-width: 501px) and (max-width: 600px) {
 
     #home h2 {
-      font-size: 1.8rem;
+      font-size: 1.7rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -280,7 +280,7 @@ main {
 @media only screen and (min-width: 601px) and (max-width: 768px) {
 
     #home h2 {
-      font-size: 1.9rem;
+      font-size: 1.8rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -294,12 +294,12 @@ main {
 @media only screen and (min-width: 769px) and (max-width: 900px) {
 
     #home h2 {
-      font-size: 2.1rem;
+      font-size: 2rem;
       white-space: normal; /* Allow line breaks */
     }
 
     #home p {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
         white-space: normal; /* Allow line breaks */
     }
 }
@@ -308,7 +308,7 @@ main {
 @media only screen and (min-width: 901px) and (max-width: 1024px) {
 
     #home h2 {
-      font-size: 2.2rem;
+      font-size: 2.1rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -325,7 +325,7 @@ main {
     }
 
     #home h2 {
-        font-size: 2.4rem;
+        font-size: 2.3rem;
         white-space: normal; /* Allow line breaks */
     }
   
@@ -342,7 +342,7 @@ main {
 /* Main - savings */
 
 #savings {
-    width: 90%;
+    width: 94%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -355,7 +355,6 @@ main {
     color: white;
     display: flex;
     flex-direction: column;
-    width: 94%;
     margin-bottom: 40px;
 }
 
@@ -378,7 +377,6 @@ main {
 @media only screen and (max-width: 380px) {
 
     #savings {
-        width: 94%;
         scroll-margin-top: 70px;
     }
 
@@ -387,12 +385,14 @@ main {
     }
 
     #savings-wordings h3 {
-      font-size: 1rem;
+      font-size: .9rem;
       white-space: normal; /* Allow line breaks */
     }
 
     #savings-wordings p {
         font-size: .6rem;
+        padding-left: 8px;
+        padding-right: 8px;
         white-space: normal; /* Allow line breaks */
     }
 }
@@ -401,7 +401,6 @@ main {
 @media only screen and (min-width: 381px) and (max-width: 480px) {
 
     #savings {
-        width: 94%;
         scroll-margin-top: 70px;
     }
 
@@ -410,12 +409,16 @@ main {
     }
 
     #savings-wordings h3 {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
+      padding-left: 6px;
+      padding-right: 6px;
       white-space: normal; /* Allow line breaks */
     }
 
     #savings-wordings p {
-        font-size: .8rem;
+        font-size: .7rem;
+        padding-left: 8px;
+        padding-right: 8px;
         white-space: normal; /* Allow line breaks */
     }
 }
@@ -424,7 +427,6 @@ main {
 @media only screen and (min-width: 481px) and (max-width: 500px) {
 
     #savings {
-        width: 94%;
         scroll-margin-top: 80px;
     }
 
@@ -433,12 +435,16 @@ main {
     }
 
     #savings-wordings h3 {
-      font-size: 1.3rem;
+      font-size: 1.2rem;
+      padding-left: 6px;
+      padding-right: 6px;
       white-space: normal; /* Allow line breaks */
     }
 
     #savings-wordings p {
-        font-size: .9rem;
+        font-size: .8rem;
+        padding-left: 8px;
+        padding-right: 8px;
         white-space: normal; /* Allow line breaks */
     }
 }
@@ -446,7 +452,32 @@ main {
 @media only screen and (min-width: 501px) and (max-width: 600px) {
 
     #savings {
-        width: 94%;
+        scroll-margin-top: 80px;
+    }
+
+    #savings-wordings {
+        margin-bottom: 30px;
+    }
+
+    #savings-wordings h3 {
+      font-size: 1.3rem;
+      padding-left: 6px;
+      padding-right: 6px;
+      white-space: normal; /* Allow line breaks */
+    }
+
+    #savings-wordings p {
+        font-size: .9rem;
+        padding-left: 8px;
+        padding-right: 8px;
+        white-space: normal; /* Allow line breaks */
+    }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+
+    #savings {
+        scroll-margin-top: 90px;
     }
 
     #savings-wordings {
@@ -455,32 +486,15 @@ main {
 
     #savings-wordings h3 {
       font-size: 1.4rem;
+      padding-left: 6px;
+      padding-right: 6px;
       white-space: normal; /* Allow line breaks */
     }
 
     #savings-wordings p {
         font-size: 1rem;
-        white-space: normal; /* Allow line breaks */
-    }
-}
-
-@media only screen and (min-width: 601px) and (max-width: 768px) {
-
-    #savings {
-        width: 94%;
-    }
-
-    #savings-wordings {
-        margin-bottom: 30px;
-    }
-
-    #savings-wordings h3 {
-      font-size: 1.5rem;
-      white-space: normal; /* Allow line breaks */
-    }
-
-    #savings-wordings p {
-        font-size: 1.1rem;
+        padding-left: 8px;
+        padding-right: 8px;
         white-space: normal; /* Allow line breaks */
     }
 }
@@ -488,16 +502,20 @@ main {
 @media only screen and (min-width: 769px) and (max-width: 900px) {
 
     #savings {
-        width: 94%;
+        scroll-margin-top: 90px;
     }
 
     #savings-wordings h3 {
       font-size: 1.5rem;
+      padding-left: 6px;
+      padding-right: 6px;
       white-space: normal; /* Allow line breaks */
     }
 
     #savings-wordings p {
         font-size: 1.1rem;
+        padding-left: 8px;
+        padding-right: 8px;
         white-space: normal; /* Allow line breaks */
     }
 }
@@ -506,16 +524,20 @@ main {
 @media only screen and (min-width: 901px) and (max-width: 1024px) {
 
     #savings {
-        width: 94%;
+        scroll-margin-top: 100px;
     }
 
     #savings-wordings h3 {
       font-size: 1.6rem;
+      padding-left: 6px;
+      padding-right: 6px;
       white-space: normal; /* Allow line breaks */
     }
 
     #savings-wordings p {
         font-size: 1.2rem;
+        padding-left: 8px;
+        padding-right: 8px;
         white-space: normal; /* Allow line breaks */
     }
 }
@@ -525,15 +547,20 @@ main {
 
     #savings {
         width: 90%;
+        scroll-margin-top: 110px;
     }
 
     #savings-wordings h3 {
       font-size: 1.7rem;
+      padding-left: 6px;
+      padding-right: 6px;
       white-space: normal; /* Allow line breaks */
     }
 
     #savings-wordings p {
         font-size: 1.3rem;
+        padding-left: 8px;
+        padding-right: 8px;
         white-space: normal; /* Allow line breaks */
     }
 }
@@ -640,7 +667,7 @@ main {
 .details-header {
     font-size: 1rem;
     font-family: 'Poppins', sans-serif;
-    padding-bottom: 4px;
+    padding-bottom: 3px;
 }
 
 
@@ -691,25 +718,25 @@ main {
         font-size: .6rem;
     }
 
-
     .interest-details.visible {
         display: flex;
-        padding-left: 24px;
+        padding-left: 30px;
         padding-right: 5px;
         padding-top: 10px;
-        padding-bottom: 18px;
+        padding-bottom: 15px;
     }
 
-    .interest-details ul p {
-        font-size: .5rem;
+    .details-header {
+        font-size: .6rem;
     }
 
     .interest-details ul li {
-        font-size: .5rem;
+        font-size: .6rem;
     }
 
     .update i {
         font-size: .5rem;
+        padding-right: 5px;
     }
 }
 
@@ -717,29 +744,22 @@ main {
 @media only screen and (min-width: 381px) and (max-width: 480px) {
 
     .banks-header p {
-      font-size: .7rem;
+      font-size: .8rem;
       white-space: normal; /* Allow line breaks */
-      justify-content: center;
-    }
-
-    .bank-header p {
-        font-size: .6rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
     }
 
     .banks-logo img {
-        min-width: 70%;
+        min-width: 60%;
         height: auto;
     }
 
     .banks-savings {
-        font-size: .6rem;
+        font-size: .7rem;
         white-space: normal; /* Allow line breaks */
     }
 
     .banks-interest {
-        font-size: .6rem;
+        font-size: .7rem;
         white-space: normal; /* Allow line breaks */
     }
 
@@ -747,129 +767,34 @@ main {
         font-size: .7rem;
     }
 
-    .expand-button-2 {
+    .interest-details.visible {
+        display: flex;
+        padding-left: 35px;
+        padding-right: 5px;
+        padding-top: 10px;
+        padding-bottom: 15px;
+    }
+
+    .details-header {
         font-size: .7rem;
     }
 
-    .interest-details.visible {
-        display: flex;
-        padding-left: 24px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
-    }
-
-    .interest-details ul p {
-        font-size: .6rem;
-    }
-
     .interest-details ul li {
-        font-size: .6rem;
-    }
-
-    .key-features ul li {
-        font-size: .6rem;
-    }
-
-    .key-features.visible {
-        display: flex;
-        padding-left: 24px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
+        font-size: .7rem;
     }
 
     .update i {
         font-size: .6rem;
-    }
-
+        padding-right: 5px;
+    }   
 }
 
 
 @media only screen and (min-width: 481px) and (max-width: 500px) {
 
     .banks-header p {
-      font-size: .8rem;
-      white-space: normal; /* Allow line breaks */
-      justify-content: center;
-    }
-
-    .bank-header p {
-        font-size: .7rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
-    }
-
-    .banks-logo img {
-        min-width: 70%;
-        height: auto;
-    }
-
-    .banks-savings {
-        font-size: .7rem;
-        white-space: normal; /* Allow line breaks */
-    }
-
-    .banks-interest {
-        font-size: .7rem;
-        white-space: normal; /* Allow line breaks */
-    }
-
-    .expand-button {
-        font-size: .8rem;
-    }
-
-    .expand-button-2 {
-        font-size: .8rem;
-    }
-
-    .interest-details.visible {
-        display: flex;
-        padding-left: 28px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
-    }
-
-    .interest-details ul p {
-        font-size: .7rem;
-    }
-
-    .interest-details ul li {
-        font-size: .7rem;
-    }
-
-    .key-features ul li {
-        font-size: .7rem;
-    }
-
-    .key-features.visible {
-        display: flex;
-        padding-left: 28px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
-    }
-
-    .update i {
-        font-size: .7rem;
-    }
-}
-
-
-
-@media only screen and (min-width: 501px) and (max-width: 600px) {
-
-    .banks-header p {
       font-size: .9rem;
       white-space: normal; /* Allow line breaks */
-      justify-content: center;
-    }
-
-    .bank-header p {
-        font-size: .8rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
     }
 
     .banks-logo img {
@@ -888,258 +813,228 @@ main {
     }
 
     .expand-button {
-        font-size: .9rem;
+        font-size: .8rem;
     }
 
-    .expand-button-2 {
+    .interest-details.visible {
+        display: flex;
+        padding-left: 36px;
+        padding-right: 5px;
+        padding-top: 10px;
+        padding-bottom: 15px;
+    }
+
+    .details-header {
+        font-size: .8rem;
+    }
+
+    .interest-details ul li {
+        font-size: .8rem;
+    }
+
+    .update i {
+        font-size: .7rem;
+        padding-right: 5px;
+    }   
+}
+
+
+@media only screen and (min-width: 501px) and (max-width: 600px) {
+
+    .banks-header p {
+      font-size: 1rem;
+      white-space: normal; /* Allow line breaks */
+    }
+
+    .banks-logo img {
+        min-width: 60%;
+        height: auto;
+    }
+
+    .banks-savings {
+        font-size: .9rem;
+        white-space: normal; /* Allow line breaks */
+    }
+
+    .banks-interest {
+        font-size: .9rem;
+        white-space: normal; /* Allow line breaks */
+    }
+
+    .expand-button {
         font-size: .9rem;
     }
 
     .interest-details.visible {
         display: flex;
-        padding-left: 32px;
+        padding-left: 40px;
         padding-right: 5px;
         padding-top: 10px;
-        padding-bottom: 18px;
+        padding-bottom: 15px;
     }
 
-    .interest-details ul p {
-        font-size: .7em;
+    .details-header {
+        font-size: .9rem;
     }
 
     .interest-details ul li {
-        font-size: .7rem;
-    }
-
-    .key-features ul li {
-        font-size: .7rem;
-    }
-
-    .key-features.visible {
-        display: flex;
-        padding-left: 32px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
+        font-size: .9rem;
     }
 
     .update i {
         font-size: .8rem;
-    }
+        padding-right: 5px;
+    }   
+    
 }
 
 
 @media only screen and (min-width: 601px) and (max-width: 768px) {
 
     .banks-header p {
-      font-size: 1rem;
+      font-size: 1.1rem;
       white-space: normal; /* Allow line breaks */
-      justify-content: center;
-    }
-
-    .bank-header p {
-        font-size: .9rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
     }
 
     .banks-logo img {
-        min-width: 60%;
+        min-width: 40%;
         height: auto;
     }
 
     .banks-savings {
-        font-size: .9rem;
+        font-size: 1rem;
         white-space: normal; /* Allow line breaks */
     }
 
     .banks-interest {
-        font-size: .9rem;
+        font-size: 1rem;
         white-space: normal; /* Allow line breaks */
     }
 
     .expand-button {
-        font-size: .9rem;
-    }
-
-    .expand-button-2 {
-        font-size: .9rem;
+        font-size: 1rem;
     }
 
     .interest-details.visible {
         display: flex;
-        padding-left: 40px;
+        padding-left: 48px;
         padding-right: 5px;
         padding-top: 10px;
-        padding-bottom: 18px;
+        padding-bottom: 15px;
     }
 
-    .interest-details ul p {
-        font-size: .8rem;
+    .details-header {
+        font-size: 1rem;
     }
 
     .interest-details ul li {
-        font-size: .8rem;
-    }
-
-    .key-features ul li {
-        font-size: .8rem;
-    }
-
-    .key-features.visible {
-        display: flex;
-        padding-left: 40px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
+        font-size: 1rem;
     }
 
     .update i {
-        font-size: .8rem;
-    }
+        font-size: .9rem;
+        padding-right: 5px;
+    }   
+    
 }
+   
 
 
 @media only screen and (min-width: 769px) and (max-width: 900px) {
 
     .banks-header p {
-        font-size: 1.1rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
+      font-size: 1.2rem;
+      white-space: normal; /* Allow line breaks */
     }
-  
-    .bank-header p {
-        font-size: 1rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
-    }
-  
+
     .banks-logo img {
-        min-width: 50%;
+        min-width: 40%;
         height: auto;
     }
-  
+
     .banks-savings {
         font-size: 1rem;
         white-space: normal; /* Allow line breaks */
     }
-  
+
     .banks-interest {
         font-size: 1rem;
         white-space: normal; /* Allow line breaks */
     }
-  
+
     .expand-button {
         font-size: 1rem;
     }
-  
-    .expand-button-2 {
-        font-size: 1rem;
-    }
-  
+
     .interest-details.visible {
         display: flex;
-        padding-left: 50px;
+        padding-left: 65px;
         padding-right: 5px;
         padding-top: 10px;
-        padding-bottom: 18px;
-    }
-  
-    .interest-details ul p {
-        font-size: .9rem;
-    }
-  
-    .interest-details ul li {
-        font-size: .9rem;
-    }
-  
-    .key-features ul li {
-        font-size: .9rem;
-    }
-  
-    .key-features.visible {
-        display: flex;
-        padding-left: 50px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
-    }
-  
-    .update i {
-        font-size: .9rem;
+        padding-bottom: 15px;
     }
 
+    .details-header {
+        font-size: 1rem;
+    }
+
+    .interest-details ul li {
+        font-size: 1rem;
+    }
+
+    .update i {
+        font-size: .8rem;
+        padding-right: 5px;
+    }          
 }
   
   
 @media only screen and (min-width: 901px) and (max-width: 1024px) {
 
     .banks-header p {
-        font-size: 1.2rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
+      font-size: 1.1rem;
+      white-space: normal; /* Allow line breaks */
     }
-  
-    .bank-header p {
-        font-size: 1.1rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
-    }
-  
+
     .banks-logo img {
-        min-width: 40%;
+        min-width: 30%;
         height: auto;
     }
-  
+
     .banks-savings {
-        font-size: 1.1rem;
+        font-size: 1rem;
         white-space: normal; /* Allow line breaks */
     }
-  
+
     .banks-interest {
-        font-size: 1.1rem;
+        font-size: 1rem;
         white-space: normal; /* Allow line breaks */
     }
-  
+
     .expand-button {
-        font-size: 1.1rem;
-    }
-  
-    .expand-button-2 {
-        font-size: 1.1rem;
-    }
-  
-    .interest-details.visible {
-        display: flex;
-        padding-left: 62px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
-    }
-  
-    .interest-details ul p {
         font-size: 1rem;
     }
-  
+
+    .interest-details.visible {
+        display: flex;
+        padding-left: 74px;
+        padding-right: 5px;
+        padding-top: 10px;
+        padding-bottom: 15px;
+    }
+
+    .details-header {
+        font-size: 1rem;
+    }
+
     .interest-details ul li {
         font-size: 1rem;
     }
-  
-    .key-features ul li {
-        font-size: 1rem;
-    }
-  
-    .key-features.visible {
-        display: flex;
-        padding-left: 62px;
-        padding-right: 5px;
-        padding-top: 10px;
-        padding-bottom: 18px;
-    }
-  
+
     .update i {
-        font-size: 1rem;
-    }
+        font-size: .9rem;
+        padding-right: 5px;
+    } 
 
 }
 
@@ -1147,67 +1042,51 @@ main {
 @media only screen and (min-width: 1025px) and (max-width: 1800px) {
 
     .banks-header p {
-        font-size: 1.3rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
+      font-size: 1.2rem;
+      white-space: normal; /* Allow line breaks */
     }
-  
-    .bank-header p {
-        font-size: 1.2rem;
-        white-space: normal; /* Allow line breaks */
-        justify-content: center;
-    }
-  
+
     .banks-logo img {
-        min-width: 30%;
+        min-width: 20%;
         height: auto;
     }
-  
-    .banks-savings {
-        font-size: 1.2rem;
-        white-space: normal; /* Allow line breaks */
-    }
-  
-    .banks-interest {
-        font-size: 1.2rem;
-        white-space: normal; /* Allow line breaks */
-    }
-  
-    .expand-button {
-        font-size: 1.2rem;
-    }
-  
-    .expand-button-2 {
-        font-size: 1.2rem;
-    }
-  
-    .interest-details.visible {
-        display: flex;
 
+    .banks-savings {
+        font-size: 1.1rem;
+        white-space: normal; /* Allow line breaks */
     }
-  
-    .interest-details ul p {
+
+    .banks-interest {
+        font-size: 1.1rem;
+        white-space: normal; /* Allow line breaks */
+    }
+
+    .expand-button {
         font-size: 1.1rem;
     }
-  
+
+    .interest-details.visible {
+        display: flex;
+        padding-left: 92px;
+        padding-right: 5px;
+        padding-top: 10px;
+        padding-bottom: 15px;
+    }
+
+    .details-header {
+        font-size: 1.1rem;
+    }
+
     .interest-details ul li {
-        
+        font-size: 1.1rem;
     }
 
     .update i {
         font-size: 1rem;
-    }
+        padding-right: 5px;
+    } 
 
 }
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1260,7 +1139,7 @@ footer {
     }
 
     #footer-content p {
-        font-size: .6rem;
+        font-size: .7rem;
         white-space: normal; /* Allow line breaks */
     }
 }
