Add the time deposit products

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 
 body {
-    background-color: #202122;
+    background-color: black;
 }
 
 /* Header */
@@ -18,7 +18,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #202122;
+    background-color: black;
     z-index: 100; 
 }
 
@@ -30,7 +30,6 @@ nav {
     align-items: center;
     padding-top: 10px;
     padding-bottom: 10px;
-    border: 1px solid white;
 }
 
 nav h1 a {
@@ -44,20 +43,24 @@ nav ul {
     display: flex;
     width: 50%;
     list-style: none;
-    border: 1px solid gray;
+    background-color: #242526;
+    border-radius: 25px;
 }
 
 .list-item {
     display: flex;
     width: 100%;
     justify-content: space-around;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 
 .list-item a {
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1rem;
+    letter-spacing: 1px;
     color: white;
-    font-family: 'Kanit', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 
@@ -71,7 +74,7 @@ nav ul {
     }
 
     .list-item a {
-        font-size: 1rem;
+        font-size: .9rem;
     }
 }
 
@@ -190,7 +193,7 @@ main {
     flex-wrap: wrap;
 }
 
-#home {
+#lemoneyd {
     width: 94%;
     min-height: calc(100vh - 250px);
     background-color: #CCEEBC;
@@ -208,7 +211,7 @@ main {
 }
 
 
-#home h2 {
+#lemoneyd h2 {
     font-size: 3.1rem;
     font-family: 'Poppins', sans-serif;
     margin-bottom: 4rem;
@@ -216,7 +219,7 @@ main {
     padding-right: 15px;
 }
 
-#home p {
+#lemoneyd p {
     font-size: 1.6rem;
     color: black;
     font-family: 'Poppins', sans-serif;
@@ -230,16 +233,16 @@ main {
 
 @media only screen and (max-width: 380px) {
 
-    #home {
+    #lemoneyd {
         min-height: calc(100vh - 280px);
     }
 
-    #home h2 {
+    #lemoneyd h2 {
       font-size: 1.3rem;
       white-space: normal; /* Allow line breaks */
     }
 
-    #home p {
+    #lemoneyd p {
         font-size: .9rem;
         white-space: normal; /* Allow line breaks */
     }
@@ -248,16 +251,16 @@ main {
 
 @media only screen and (min-width: 381px) and (max-width: 480px) {
 
-    #home {
+    #lemoneyd {
         min-height: calc(100vh - 280px);
     }
 
-    #home h2 {
+    #lemoneyd h2 {
       font-size: 1.5rem;
       white-space: normal; /* Allow line breaks */
     }
 
-    #home p {
+    #lemoneyd p {
         font-size: 1rem;
         white-space: normal; /* Allow line breaks */
     }
@@ -266,12 +269,12 @@ main {
 
 @media only screen and (min-width: 481px) and (max-width: 500px) {
 
-    #home h2 {
+    #lemoneyd h2 {
       font-size: 1.6rem;
       white-space: normal; /* Allow line breaks */
     }
 
-    #home p {
+    #lemoneyd p {
         font-size: 1.1rem;
         white-space: normal; /* Allow line breaks */
     }
@@ -279,12 +282,12 @@ main {
 
 @media only screen and (min-width: 501px) and (max-width: 600px) {
 
-    #home h2 {
+    #lemoneyd h2 {
       font-size: 1.7rem;
       white-space: normal; /* Allow line breaks */
     }
 
-    #home p {
+    #lemoneyd p {
         font-size: 1.2rem;
         white-space: normal; /* Allow line breaks */
     }
@@ -292,12 +295,12 @@ main {
 
 @media only screen and (min-width: 601px) and (max-width: 768px) {
 
-    #home h2 {
+    #lemoneyd h2 {
       font-size: 1.8rem;
       white-space: normal; /* Allow line breaks */
     }
 
-    #home p {
+    #lemoneyd p {
         font-size: 1.3rem;
         white-space: normal; /* Allow line breaks */
     }
@@ -306,12 +309,12 @@ main {
 
 @media only screen and (min-width: 769px) and (max-width: 900px) {
 
-    #home h2 {
+    #lemoneyd h2 {
       font-size: 2rem;
       white-space: normal; /* Allow line breaks */
     }
 
-    #home p {
+    #lemoneyd p {
         font-size: 1.3rem;
         white-space: normal; /* Allow line breaks */
     }
@@ -320,12 +323,12 @@ main {
 
 @media only screen and (min-width: 901px) and (max-width: 1024px) {
 
-    #home h2 {
+    #lemoneyd h2 {
       font-size: 2.1rem;
       white-space: normal; /* Allow line breaks */
     }
 
-    #home p {
+    #lemoneyd p {
         font-size: 1.4rem;
         white-space: normal; /* Allow line breaks */
     }
@@ -333,16 +336,16 @@ main {
 
 @media only screen and (min-width: 1025px) and (max-width: 1800px) {
 
-    #home {
+    #lemoneyd {
         width: 90%
     }
 
-    #home h2 {
+    #lemoneyd h2 {
         font-size: 2.3rem;
         white-space: normal; /* Allow line breaks */
     }
   
-    #home p {
+    #lemoneyd p {
         font-size: 1.5rem;
         white-space: normal; /* Allow line breaks */
     }
@@ -354,7 +357,7 @@ main {
 
 /* Main - savings */
 
-#savings {
+#savings-account {
     width: 94%;
     height: auto;
     display: flex;
@@ -362,6 +365,18 @@ main {
     align-items: center;
     border-radius: 30px;
     scroll-margin-top: 110px;
+    margin-bottom: 60px;
+}
+
+#time-deposit {
+    width: 94%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 30px;
+    scroll-margin-top: 110px;
+    margin-bottom: 60px;    
 }
 
 #savings-wordings {
@@ -389,7 +404,7 @@ main {
 
 @media only screen and (max-width: 380px) {
 
-    #savings {
+    #savings-account {
         scroll-margin-top: 70px;
     }
 
@@ -413,7 +428,7 @@ main {
 
 @media only screen and (min-width: 381px) and (max-width: 480px) {
 
-    #savings {
+    #savings-account {
         scroll-margin-top: 70px;
     }
 
@@ -439,7 +454,7 @@ main {
 
 @media only screen and (min-width: 481px) and (max-width: 500px) {
 
-    #savings {
+    #savings-account {
         scroll-margin-top: 80px;
     }
 
@@ -464,7 +479,7 @@ main {
 
 @media only screen and (min-width: 501px) and (max-width: 600px) {
 
-    #savings {
+    #savings-account {
         scroll-margin-top: 80px;
     }
 
@@ -489,7 +504,7 @@ main {
 
 @media only screen and (min-width: 601px) and (max-width: 768px) {
 
-    #savings {
+    #savings-account {
         scroll-margin-top: 90px;
     }
 
@@ -514,7 +529,7 @@ main {
 
 @media only screen and (min-width: 769px) and (max-width: 900px) {
 
-    #savings {
+    #savings-account {
         scroll-margin-top: 90px;
     }
 
@@ -536,7 +551,7 @@ main {
 
 @media only screen and (min-width: 901px) and (max-width: 1024px) {
 
-    #savings {
+    #savings-account {
         scroll-margin-top: 100px;
     }
 
@@ -558,7 +573,7 @@ main {
 
 @media only screen and (min-width: 1025px) and (max-width: 1800px) {
 
-    #savings {
+    #savings-account {
         width: 90%;
         scroll-margin-top: 110px;
     }
