--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ nav ul {
     display: flex;
     width: 50%;
     list-style: none;
-    background-color: #242526;
+    background-color: #1f1f1f;
     border-radius: 25px;
 }
 
@@ -69,6 +69,11 @@ nav ul {
         width: 94%;
     }
 
+    nav ul {
+        width: 44%;
+    }
+
+    
     nav h1 a {
         font-size: 1.2rem;
     }
@@ -80,105 +85,135 @@ nav ul {
 
 
 @media only screen and (min-width: 381px) and (max-width: 480px) {
+    nav {
+        width: 92%;
+    }
+
+    nav ul {
+        width: 40%;
+    }
+
     nav h1 a {
         font-size: 1.3rem;
     }
     
     .list-item a {
         font-size: 1rem;
-        padding-left: 14px;
-        padding-right: 11px;
-        padding-bottom: 1px;
     }
 }
 
 
 @media only screen and (min-width: 481px) and (max-width: 500px) {
+    nav {
+        width: 92%;
+    }
+
+    nav ul {
+        width: 40%;
+    }
+
     nav h1 a {
         font-size: 1.4rem;
     }
     
     .list-item a {
         font-size: 1rem;
-        padding-left: 15px;
-        padding-right: 12px;
-        padding-bottom: 1px;
     }
 }
 
 
 @media only screen and (min-width: 501px) and (max-width: 600px) {
+    nav {
+        width: 92%;
+    }
+
+    nav ul {
+        width: 40%;
+    }
+
     nav h1 a {
         font-size: 1.5rem;
     }
     
     .list-item a {
         font-size: 1.1rem;
-        padding-left: 16px;
-        padding-right: 13px;
-        padding-bottom: 1px;
     }
 }
 
 
 @media only screen and (min-width: 601px) and (max-width: 768px) {
+    nav {
+        width: 92%;
+    }
+
+    nav ul {
+        width: 40%;
+    }
+
     nav h1 a {
         font-size: 1.6rem;
     }
     
     .list-item a {
-        font-size: 1.2rem;
-        padding-left: 16px;
-        padding-right: 13px;
-        padding-bottom: 1px;
+        font-size: 1.1rem;
     }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 900px) {
+    nav {
+        width: 92%;
+    }
+
+    nav ul {
+        width: 30%;
+    }
+
     nav h1 a {
         font-size: 1.7rem;
     }
     
     .list-item a {
         font-size: 1.2rem;
-        padding-left: 16px;
-        padding-right: 13px;
-        padding-bottom: 1px;
     }
 }
 
 @media only screen and (min-width: 901px) and (max-width: 1024px) {
+    nav {
+        width: 92%;
+    }
+
+    nav ul {
+        width: 30%;
+    }
+
     nav h1 a {
         font-size: 1.8rem;
     }
     
     .list-item a {
-        font-size: 1.3rem;
-        padding-left: 16px;
-        padding-right: 13px;
-        padding-bottom: 1px;
+        font-size: 1.2rem;
     }
 }
 
 
 @media only screen and (min-width: 1025px) and (max-width: 1800px) {
+    nav {
+        width: 88%;
+    }
+
+    nav ul {
+        width: 30%;
+    }
+
+
     nav h1 a {
         font-size: 1.9rem;
     }
     
     .list-item a {
         font-size: 1.3rem;
-        padding-left: 16px;
-        padding-right: 13px;
-        padding-bottom: 1px;
     }
 }
-
-
-
-
-
-
 
 
 
@@ -408,17 +443,23 @@ main {
         scroll-margin-top: 70px;
     }
 
+    #time-deposit {
+        scroll-margin-top: 70px;
+    }
+
     #savings-wordings {
         margin-bottom: 20px;
     }
 
     #savings-wordings h3 {
       font-size: .9rem;
+      padding-left: 7px;
+      padding-right: 7px;
       white-space: normal; /* Allow line breaks */
     }
 
     #savings-wordings p {
-        font-size: .6rem;
+        font-size: .7rem;
         padding-left: 8px;
         padding-right: 8px;
         white-space: normal; /* Allow line breaks */
@@ -429,6 +470,10 @@ main {
 @media only screen and (min-width: 381px) and (max-width: 480px) {
 
     #savings-account {
+        scroll-margin-top: 70px;
+    }
+
+    #time-deposit {
         scroll-margin-top: 70px;
     }
 
@@ -444,7 +489,7 @@ main {
     }
 
     #savings-wordings p {
-        font-size: .7rem;
+        font-size: .8rem;
         padding-left: 8px;
         padding-right: 8px;
         white-space: normal; /* Allow line breaks */
@@ -455,6 +500,10 @@ main {
 @media only screen and (min-width: 481px) and (max-width: 500px) {
 
     #savings-account {
+        scroll-margin-top: 80px;
+    }
+
+    #time-deposit {
         scroll-margin-top: 80px;
     }
 
@@ -470,7 +519,7 @@ main {
     }
 
     #savings-wordings p {
-        font-size: .8rem;
+        font-size: .9rem;
         padding-left: 8px;
         padding-right: 8px;
         white-space: normal; /* Allow line breaks */
@@ -480,6 +529,10 @@ main {
 @media only screen and (min-width: 501px) and (max-width: 600px) {
 
     #savings-account {
+        scroll-margin-top: 80px;
+    }
+
+    #time-deposit {
         scroll-margin-top: 80px;
     }
 
@@ -508,6 +561,10 @@ main {
         scroll-margin-top: 90px;
     }
 
+    #time-deposit {
+        scroll-margin-top: 90px;
+    }
+
     #savings-wordings {
         margin-bottom: 30px;
     }
@@ -533,6 +590,10 @@ main {
         scroll-margin-top: 90px;
     }
 
+    #time-deposit {
+        scroll-margin-top: 90px;
+    }
+
     #savings-wordings h3 {
       font-size: 1.5rem;
       padding-left: 6px;
@@ -555,6 +616,10 @@ main {
         scroll-margin-top: 100px;
     }
 
+    #time-deposit {
+        scroll-margin-top: 100px;
+    }
+
     #savings-wordings h3 {
       font-size: 1.6rem;
       padding-left: 6px;
@@ -574,6 +639,11 @@ main {
 @media only screen and (min-width: 1025px) and (max-width: 1800px) {
 
     #savings-account {
+        width: 90%;
+        scroll-margin-top: 110px;
+    }
+
+    #time-deposit {
         width: 90%;
         scroll-margin-top: 110px;
     }
@@ -1129,7 +1199,7 @@ footer {
 }
 
 #footer-content {
-    background-color: #202122;
+    background-color: #0f0f0f;
     border-radius: 30px;
     width: 94%;
     height: auto;
@@ -1138,10 +1208,9 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
-    margin-bottom: 50px;
+    margin-top: 70px;
+    margin-bottom: 40px;
     flex-direction: column;
-    border: 1px solid #e9ff74;
 }
 
 #footer-content p {
@@ -1164,6 +1233,8 @@ footer {
     #footer-content {
         padding-top: 10px;
         padding-bottom: 10px;
+        margin-top: 5px;
+        margin-bottom: 20px;
     }
 
     #footer-content p {
@@ -1178,6 +1249,8 @@ footer {
     #footer-content {
         padding-top: 10px;
         padding-bottom: 10px;
+        margin-top: 5px;
+        margin-bottom: 20px;
     }
 
     #footer-content p {
@@ -1192,6 +1265,8 @@ footer {
     #footer-content {
         padding-top: 10px;
         padding-bottom: 10px;
+        margin-top: 5px;
+        margin-bottom: 20px;
     }
 
     #footer-content p {
@@ -1206,6 +1281,8 @@ footer {
     #footer-content {
         padding-top: 10px;
         padding-bottom: 10px;
+        margin-top: 5px;
+        margin-bottom: 20px;
     }
 
     #footer-content p {
@@ -1221,6 +1298,8 @@ footer {
     #footer-content {
         padding-top: 10px;
         padding-bottom: 10px;
+        margin-top: 10px;
+        margin-bottom: 20px;
     }
 
     #footer-content p {
@@ -1235,6 +1314,8 @@ footer {
     #footer-content {
         padding-top: 10px;
         padding-bottom: 10px;
+        margin-top: 20px;
+        margin-bottom: 30px;
     }
 
     #footer-content p {
