Add the referral code for Seabank and add the fb page link in the footer

--- a/styles.css
+++ b/styles.css
@@ -1222,8 +1222,9 @@ footer {
     padding-right: 12px;
 }
 
-.lemoneyd-link {
+.lemoneyd-fb {
     color: #e9ff74;
+    text-decoration: none;
 }
 
 
