--- a/styles.css
+++ b/styles.css
@@ -230,8 +230,8 @@ main {
 
 #lemoneyd {
     width: 94%;
-    min-height: calc(100vh - 250px);
-    background-color: #CCEEBC;
+    min-height: calc(100vh - 380px);
+    background-color: #DEFF8B;
     color: black;
     display: flex;
     align-items: center;
@@ -249,7 +249,7 @@ main {
 #lemoneyd h2 {
     font-size: 3.1rem;
     font-family: 'Poppins', sans-serif;
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -269,11 +269,12 @@ main {
 @media only screen and (max-width: 380px) {
 
     #lemoneyd {
-        min-height: calc(100vh - 280px);
+        min-height: calc(100vh - 380px);
     }
 
     #lemoneyd h2 {
-      font-size: 1.3rem;
+      font-size: 1.1rem;
+      margin-bottom: 1.3rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -287,11 +288,12 @@ main {
 @media only screen and (min-width: 381px) and (max-width: 480px) {
 
     #lemoneyd {
-        min-height: calc(100vh - 280px);
+        min-height: calc(100vh - 380px);
     }
 
     #lemoneyd h2 {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
+      margin-bottom: 1.5rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -305,7 +307,8 @@ main {
 @media only screen and (min-width: 481px) and (max-width: 500px) {
 
     #lemoneyd h2 {
-      font-size: 1.6rem;
+      font-size: 1.3rem;
+      margin-bottom: 1.5rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -318,7 +321,8 @@ main {
 @media only screen and (min-width: 501px) and (max-width: 600px) {
 
     #lemoneyd h2 {
-      font-size: 1.7rem;
+      font-size: 1.4rem;
+      margin-bottom: 1.7rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -331,7 +335,8 @@ main {
 @media only screen and (min-width: 601px) and (max-width: 768px) {
 
     #lemoneyd h2 {
-      font-size: 1.8rem;
+      font-size: 1.5rem;
+      margin-bottom: 1.8rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -345,7 +350,8 @@ main {
 @media only screen and (min-width: 769px) and (max-width: 900px) {
 
     #lemoneyd h2 {
-      font-size: 2rem;
+      font-size: 1.6rem;
+      margin-bottom: 1.9rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -359,7 +365,8 @@ main {
 @media only screen and (min-width: 901px) and (max-width: 1024px) {
 
     #lemoneyd h2 {
-      font-size: 2.1rem;
+      font-size: 1.7rem;
+      margin-bottom: 1.9rem;
       white-space: normal; /* Allow line breaks */
     }
 
@@ -372,11 +379,13 @@ main {
 @media only screen and (min-width: 1025px) and (max-width: 1800px) {
 
     #lemoneyd {
+        min-height: calc(100vh - 400px);
         width: 90%
     }
 
     #lemoneyd h2 {
-        font-size: 2.3rem;
+        font-size: 2rem;
+        margin-bottom: 2.5rem;
         white-space: normal; /* Allow line breaks */
     }
   
